Всплывающая подсказка и переход к определениям для аннотаций в OneScript